ASDGame/obj/Debug/net5.0/AgentConfigurationParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\arnold\source\repos\Test\Test\Agent\Antlr\Grammar\AgentConfiguration.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Agent.Antlr.Grammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class AgentConfigurationParser : Parser {
	public const int
		WS=1, DOUBLE_QUOTE=2, EQUALSIGN=3, FINDS=4, NEARBY=5, WHEN=6, OTHERWISE=7, 
		THEN=8, GREATER_THAN=9, LESS_THAN=10, EQUALS=11, CONTAINS=12, DOES_NOT_CONTAIN=13, 
		PLAYER=14, NPC=15, INVENTORY=16, OPPONENT=17, POTION=18, ITEM=19, WEAPON=20, 
		CURRENT=21, STRENGTH=22, HEALTH=23, POWER=24, STAMINA=25, GENERAL=26, 
		COMBAT=27, EXPLORE=28, INT=29, STRING=30;
	public const int
		RULE_configuration = 0, RULE_rule = 1, RULE_settingBlock = 2, RULE_actionBlock = 3, 
		RULE_condition = 4, RULE_whenClause = 5, RULE_otherwiseClause = 6, RULE_comparison = 7, 
		RULE_setting = 8, RULE_action = 9, RULE_actionSubject = 10, RULE_string = 11, 
		RULE_comparable = 12, RULE_itemStat = 13, RULE_subjectStat = 14, RULE_subject = 15, 
		RULE_item = 16, RULE_stat = 17;
	public static readonly string[] ruleNames = {
		"configuration", "rule", "settingBlock", "actionBlock", "condition", "whenClause", 
		"otherwiseClause", "comparison", "setting", "action", "actionSubject", 
		"string", "comparable", "itemStat", "subjectStat", "subject", "item", 
		"stat"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'\"'", "'='", "'finds'", "'nearby'", "'when'", "'otherwise'", 
		"'then'", "'greater than'", "'less than'", "'equals'", "'contains'", "'does not contain'", 
		"'player'", "'npc'", "'inventory'", "'opponent'", "'potion'", "'item'", 
		"'weapon'", "'current'", "'strength'", "'health'", "'power'", "'stamina'", 
		"'general'", "'combat'", "'explore'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "DOUBLE_QUOTE", "EQUALSIGN", "FINDS", "NEARBY", "WHEN", "OTHERWISE", 
		"THEN", "GREATER_THAN", "LESS_THAN", "EQUALS", "CONTAINS", "DOES_NOT_CONTAIN", 
		"PLAYER", "NPC", "INVENTORY", "OPPONENT", "POTION", "ITEM", "WEAPON", 
		"CURRENT", "STRENGTH", "HEALTH", "POWER", "STAMINA", "GENERAL", "COMBAT", 
		"EXPLORE", "INT", "STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AgentConfiguration.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public AgentConfigurationParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ConfigurationContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(AgentConfigurationParser.Eof, 0); }
		public RuleContext[] rule() {
			return GetRuleContexts<RuleContext>();
		}
		public RuleContext rule(int i) {
			return GetRuleContext<RuleContext>(i);
		}
		public SettingBlockContext[] settingBlock() {
			return GetRuleContexts<SettingBlockContext>();
		}
		public SettingBlockContext settingBlock(int i) {
			return GetRuleContext<SettingBlockContext>(i);
		}
		public ConfigurationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_configuration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterConfiguration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitConfiguration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfiguration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigurationContext configuration() {
		ConfigurationContext _localctx = new ConfigurationContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_configuration);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 36; rule();
					}
					} 
				}
				State = 41;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			}
			State = 45;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMBAT || _la==EXPLORE) {
				{
				{
				State = 42; settingBlock();
				}
				}
				State = 47;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 48; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleContext : ParserRuleContext {
		public ITerminalNode EQUALSIGN() { return GetToken(AgentConfigurationParser.EQUALSIGN, 0); }
		public ITerminalNode[] STRING() { return GetTokens(AgentConfigurationParser.STRING); }
		public ITerminalNode STRING(int i) {
			return GetToken(AgentConfigurationParser.STRING, i);
		}
		public SettingContext setting() {
			return GetRuleContext<SettingContext>(0);
		}
		public RuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterRule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitRule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleContext rule() {
		RuleContext _localctx = new RuleContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_rule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case COMBAT:
			case EXPLORE:
				{
				State = 50; setting();
				}
				break;
			case STRING:
				{
				State = 51; Match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 54; Match(EQUALSIGN);
			State = 55; Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SettingBlockContext : ParserRuleContext {
		public SettingContext setting() {
			return GetRuleContext<SettingContext>(0);
		}
		public ConditionContext[] condition() {
			return GetRuleContexts<ConditionContext>();
		}
		public ConditionContext condition(int i) {
			return GetRuleContext<ConditionContext>(i);
		}
		public ActionBlockContext[] actionBlock() {
			return GetRuleContexts<ActionBlockContext>();
		}
		public ActionBlockContext actionBlock(int i) {
			return GetRuleContext<ActionBlockContext>(i);
		}
		public SettingBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_settingBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterSettingBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitSettingBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSettingBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SettingBlockContext settingBlock() {
		SettingBlockContext _localctx = new SettingBlockContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_settingBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57; setting();
			State = 60;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 60;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case WHEN:
					{
					State = 58; condition();
					}
					break;
				case STRING:
					{
					State = 59; actionBlock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 62;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==WHEN || _la==STRING );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionBlockContext : ParserRuleContext {
		public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public ConditionContext[] condition() {
			return GetRuleContexts<ConditionContext>();
		}
		public ConditionContext condition(int i) {
			return GetRuleContext<ConditionContext>(i);
		}
		public ActionBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterActionBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitActionBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionBlockContext actionBlock() {
		ActionBlockContext _localctx = new ActionBlockContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_actionBlock);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 64; action();
			State = 66;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 65; condition();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 68;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionContext : ParserRuleContext {
		public WhenClauseContext whenClause() {
			return GetRuleContext<WhenClauseContext>(0);
		}
		public OtherwiseClauseContext otherwiseClause() {
			return GetRuleContext<OtherwiseClauseContext>(0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterCondition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitCondition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConditionContext condition() {
		ConditionContext _localctx = new ConditionContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_condition);
		try {
			State = 74;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 70; whenClause();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 71; whenClause();
				State = 72; otherwiseClause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhenClauseContext : ParserRuleContext {
		public ITerminalNode WHEN() { return GetToken(AgentConfigurationParser.WHEN, 0); }
		public ComparableContext[] comparable() {
			return GetRuleContexts<ComparableContext>();
		}
		public ComparableContext comparable(int i) {
			return GetRuleContext<ComparableContext>(i);
		}
		public ComparisonContext comparison() {
			return GetRuleContext<ComparisonContext>(0);
		}
		public ITerminalNode THEN() { return GetToken(AgentConfigurationParser.THEN, 0); }
		public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public ActionSubjectContext actionSubject() {
			return GetRuleContext<ActionSubjectContext>(0);
		}
		public WhenClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whenClause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterWhenClause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitWhenClause(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhenClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhenClauseContext whenClause() {
		WhenClauseContext _localctx = new WhenClauseContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_whenClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(WHEN);
			State = 77; comparable();
			State = 78; comparison();
			State = 79; comparable();
			State = 80; Match(THEN);
			State = 83;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				State = 81; action();
				}
				break;

			case 2:
				{
				State = 82; actionSubject();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OtherwiseClauseContext : ParserRuleContext {
		public ITerminalNode OTHERWISE() { return GetToken(AgentConfigurationParser.OTHERWISE, 0); }
		public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public ActionSubjectContext actionSubject() {
			return GetRuleContext<ActionSubjectContext>(0);
		}
		public OtherwiseClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_otherwiseClause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterOtherwiseClause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitOtherwiseClause(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOtherwiseClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OtherwiseClauseContext otherwiseClause() {
		OtherwiseClauseContext _localctx = new OtherwiseClauseContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_otherwiseClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(OTHERWISE);
			State = 88;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				State = 86; action();
				}
				break;

			case 2:
				{
				State = 87; actionSubject();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComparisonContext : ParserRuleContext {
		public ITerminalNode GREATER_THAN() { return GetToken(AgentConfigurationParser.GREATER_THAN, 0); }
		public ITerminalNode LESS_THAN() { return GetToken(AgentConfigurationParser.LESS_THAN, 0); }
		public ITerminalNode EQUALS() { return GetToken(AgentConfigurationParser.EQUALS, 0); }
		public ITerminalNode CONTAINS() { return GetToken(AgentConfigurationParser.CONTAINS, 0); }
		public ITerminalNode DOES_NOT_CONTAIN() { return GetToken(AgentConfigurationParser.DOES_NOT_CONTAIN, 0); }
		public ITerminalNode NEARBY() { return GetToken(AgentConfigurationParser.NEARBY, 0); }
		public ITerminalNode FINDS() { return GetToken(AgentConfigurationParser.FINDS, 0); }
		public ComparisonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparison; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterComparison(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitComparison(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparison(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComparisonContext comparison() {
		ComparisonContext _localctx = new ComparisonContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_comparison);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FINDS) | (1L << NEARBY) | (1L << GREATER_THAN) | (1L << LESS_THAN) | (1L << EQUALS) | (1L << CONTAINS) | (1L << DOES_NOT_CONTAIN))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SettingContext : ParserRuleContext {
		public ITerminalNode COMBAT() { return GetToken(AgentConfigurationParser.COMBAT, 0); }
		public ITerminalNode EXPLORE() { return GetToken(AgentConfigurationParser.EXPLORE, 0); }
		public SettingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setting; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterSetting(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitSetting(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetting(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SettingContext setting() {
		SettingContext _localctx = new SettingContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_setting);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			_la = _input.La(1);
			if ( !(_la==COMBAT || _la==EXPLORE) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		public ITerminalNode STRING() { return GetToken(AgentConfigurationParser.STRING, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterAction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitAction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionContext action() {
		ActionContext _localctx = new ActionContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_action);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionSubjectContext : ParserRuleContext {
		public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public SubjectContext subject() {
			return GetRuleContext<SubjectContext>(0);
		}
		public ItemContext item() {
			return GetRuleContext<ItemContext>(0);
		}
		public ActionSubjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionSubject; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterActionSubject(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitActionSubject(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionSubject(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionSubjectContext actionSubject() {
		ActionSubjectContext _localctx = new ActionSubjectContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_actionSubject);
		try {
			State = 102;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,9,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96; action();
				State = 97; subject();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 99; action();
				State = 100; item();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringContext : ParserRuleContext {
		public ITerminalNode[] DOUBLE_QUOTE() { return GetTokens(AgentConfigurationParser.DOUBLE_QUOTE); }
		public ITerminalNode DOUBLE_QUOTE(int i) {
			return GetToken(AgentConfigurationParser.DOUBLE_QUOTE, i);
		}
		public ITerminalNode[] STRING() { return GetTokens(AgentConfigurationParser.STRING); }
		public ITerminalNode STRING(int i) {
			return GetToken(AgentConfigurationParser.STRING, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.EnterString(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAgentConfigurationListener typedListener = listener as IAgentConfigurationListener;
			if (typedListener != null) typedListener.ExitString(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAgentConfigurationVisitor<TResult> typedVisitor = visitor as IAgentConfigurationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringContext @string() {
		StringContext _localctx = new StringContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_string);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; Match(DOUBLE_QUOTE);
			State = 106;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 105; Match(STRING);
				}
				}
				State = 108;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==STRING );
			State = 110; Match(DOUBLE_QUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
